Update homepage text

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <p>When not working on digital projects, you'll find me photographing the South West of England, flying drones and making my smart home self aware.</p>
     
             <p>
-              Follow me <a class="link-1" href="https://twitter.com/howardthomson" target="_blank">tweeting</a>, taking
-              <a class="link-1" href="https://www.instagram.com/howardthomson/" target="_blank">photos</a> and writing.
+              Follow my <a class="link-1" href="https://twitter.com/howardthomson" target="_blank">tweets</a>, my
+              <a class="link-1" href="https://www.instagram.com/howardthomson/" target="_blank">photography</a> and other social accounts below.
             </p>
 
             
