--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-    <meta name="description" content="Howard Thomson Personal Landing Page" />
+    <meta name="description" content="Where to find me on the interwebs" />
     <meta name="author" content="Howard Thomson">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
