--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="content">
             <img class="profile-image rounded" src="images/ht-avatar.png" alt="Howard Thomson"/>
             <h1>
-                Hi, I am Howard<br>
+                Hi, I am Howard,<br>
 	            a <span id="typed"></span><br>
 				based in Devon, UK.
             </h1>
