Update typed text

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         </div>
     </div>
 	<div id="typed-strings">
-	    <p>front-end developer</p>
+	    <p>full stack developer</p>
 	    <p>photographer</p>
 	    <p>smart home geek</p>
+	    <p>Xbox ambassador</p>
 	</div>
 	<script src="js/main.js"></script>
 </body>
