--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img class="profile-image rounded" src="images/ht-avatar.png" alt="Howard Thomson"/>
             <h1>
                 Hi, I am Howard,<br>
-	            a <span id="typed"></span><br>
+	            a<span id="typed"></span><br>
 				based in Devon, UK.
             </h1>
             <p>
@@ -40,10 +40,10 @@
         </div>
     </div>
 	<div id="typed-strings">
-	    <p>full stack developer</p>
-	    <p>photographer</p>
-	    <p>smart home geek</p>
-	    <p>Xbox ambassador</p>
+	    <p> full stack developer</p>
+	    <p> photographer</p>
+	    <p> smart home geek</p>
+	    <p>n Xbox ambassador</p>
 	</div>
 	<script src="js/main.js"></script>
 </body>
