Update social links and styles

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <a class="link-1" href="https://www.instagram.com/howardthomson/" target="_blank">photography</a> and other social accounts below.
             </p>
             <p>
-            	<a class="social-link facebook" href="#"></a>
-                <a class="social-link twitter" href="#"></a>
-                <a class="social-link pinterest" href="#"></a>
-                <a class="social-link vimeo" href="#"></a>
-                <a class="social-link instagram" href="#"></a>
+                <a class="social-link" target="_blank" href="https://twitter.com/howardthomson"><i class="fab fa-twitter"></i></a>
+                <a class="social-link" target="_blank" href="https://www.instagram.com/howardthomson/"><i class="fab fa-instagram"></i></a>
+                <a class="social-link" target="_blank" href="https://open.spotify.com/user/howardthomson"><i class="fab fa-spotify"></i></a>
+                <a class="social-link" target="_blank" href="https://www.twitch.tv/howdarnsmooth"><i class="fab fa-twitch"></i></a>
+                <a class="social-link" target="_blank" href="http://live.xbox.com/Profile?Gamertag=How+Darn+Smooth"><i class="fab fa-xbox"></i></a>
             </p>
         </div>
     </div>
