--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/13c54a68e0.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="is-text-light">
     <div class="content-wrap">
         <div class="content">
             <img class="profile-image rounded" src="images/ht-avatar.png" alt="Howard Thomson"/>
@@ -24,7 +24,7 @@
 				based in Devon, UK.
             </h1>
             <p>
-                When not working on digital projects, you'll find me photographing the South West of England, flying drones and making my smart home self aware.
+                When I'm not shooting, you'll find me building things for the internet, listening to questionable Spotify playlists or chilling by the beach.
             </p>
             <p>
               Follow my <a class="link-1" href="https://twitter.com/howardthomson" target="_blank">tweets</a>, my
@@ -40,8 +40,9 @@
         </div>
     </div>
 	<div id="typed-strings">
+        <p> drone pilot</p>	    
+        <p> photographer</p>
 	    <p> full stack developer</p>
-	    <p> photographer</p>
 	    <p> smart home geek</p>
 	    <p>n Xbox ambassador</p>
 	</div>
