Update links and text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta name="description" content="Where to find me on the interwebs" />
+    <meta name="description" content="Where to find me on the internet" />
     <meta name="author" content="Howard Thomson">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Howard Thomson</title>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/fonts/hk-grotesk/style.css">
     <link rel="stylesheet" type="text/css" href="css/fonts/fontello/css/fontello.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script src="https://kit.fontawesome.com/13c54a68e0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cc808dc832.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="is-text-light">
@@ -19,32 +19,26 @@
         <div class="content">
             <img class="profile-image rounded" src="images/ht-avatar.png" alt="Howard Thomson"/>
             <h1>
-                Hi, I am Howard,<br>
-	            a<span id="typed"></span><br>
+                Hi, I'm Howard,<br>
+	            a <span id="typed"></span><br>
 				based in Devon, UK.
             </h1>
             <p>
-                When I'm not shooting, you'll find me building things for the internet, listening to questionable Spotify playlists or chilling by the beach.
+                When I'm not flying, you'll find me building things for the internet, exploring lighthouses or discovering my latest obsession on <a href="https://open.spotify.com/user/howardthomson" target="_blank">Spotify</a> / <a href="https://www.discogs.com/user/howardthomson/collection?header=1">vinyl</a>.
             </p>
+            <h3>Where to find me online</h3>
             <p>
-              Follow my <a class="link-1" href="https://twitter.com/howardthomson" target="_blank">tweets</a>, my
-              <a class="link-1" href="https://www.instagram.com/howardthomson/" target="_blank">photography</a> and other social accounts below.
-            </p>
-            <p>
-                <a class="social-link" target="_blank" href="https://twitter.com/howardthomson"><i class="fab fa-twitter"></i></a>
                 <a class="social-link" target="_blank" href="https://www.instagram.com/howardthomson/"><i class="fab fa-instagram"></i></a>
+                <a class="social-link" target="_blank" href="https://www.discogs.com/user/howardthomson/collection?header=1"><i class="fa-thin fa-turntable"></i></a>
                 <a class="social-link" target="_blank" href="https://open.spotify.com/user/howardthomson"><i class="fab fa-spotify"></i></a>
-                <a class="social-link" target="_blank" href="https://www.twitch.tv/howdarnsmooth"><i class="fab fa-twitch"></i></a>
-                <a class="social-link" target="_blank" href="http://live.xbox.com/Profile?Gamertag=How+Darn+Smooth"><i class="fab fa-xbox"></i></a>
+                <a class="social-link" target="_blank" href="https://twitter.com/howardthomson"><i class="fab fa-x-twitter"></i></a>
             </p>
         </div>
     </div>
 	<div id="typed-strings">
-        <p> drone pilot</p>	    
-        <p> photographer</p>
-	    <p> full stack developer</p>
-	    <p> smart home geek</p>
-	    <p>n Xbox ambassador</p>
+        <p>drone pilot</p>	    
+        <p>photographer</p>
+	    <p>full stack developer</p>
 	</div>
 	<script src="js/main.js"></script>
 </body>
