Add Threads to social links

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <a class="social-link" target="_blank" href="https://www.instagram.com/howardthomson/"><i class="fab fa-instagram"></i></a>
                 <a class="social-link" target="_blank" href="https://www.discogs.com/user/howardthomson/collection?header=1"><i class="fa-thin fa-turntable"></i></a>
                 <a class="social-link" target="_blank" href="https://open.spotify.com/user/howardthomson"><i class="fab fa-spotify"></i></a>
+                <a class="social-link" target="_blank" href="https://www.threads.net/@howardthomsonn"><i class="fab fa-threads"></i></a>
                 <a class="social-link" target="_blank" href="https://twitter.com/howardthomson"><i class="fab fa-x-twitter"></i></a>
             </p>
         </div>
